--- a/package.json
+++ b/package.json
@@ -19,5 +19,11 @@
   "bugs": {
     "url": "https://github.com/marinakomissar/frontend-project-lvl1/issues"
   },
-  "homepage": "https://github.com/marinakomissar/frontend-project-lvl1#readme"
+  "homepage": "https://github.com/marinakomissar/frontend-project-lvl1#readme",
+  "devDependencies": {
+    "eslint": "^7.19.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-react": "^7.22.0"
+  }
 }
