--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,11 +1,10 @@
-env:
-  node: true
-
-# https://github.com/babel/babel-eslint
-parser: babel-eslint
-
-extends:
-  - 'airbnb-base'
-
-rules:
-  no-console: 0
+---
+  plugins:
+    - import
+  extends:
+    - airbnb-base
+  env:
+    node: true
+  rules:
+      no-console: off
+      import/extensions: off
