--- a/package.json
+++ b/package.json
@@ -1,29 +1,40 @@
 {
-  "bin": {
-    "brain-games": "bin/brain-games.js"
-  },
-  "name": "@hexlet/code",
+  "name": "frontend-project-lvl1",
   "version": "1.0.0",
-  "description": "[![Actions Status](https://github.com/marinakomissar/frontend-project-lvl1/workflows/hexlet-check/badge.svg)](https://github.com/marinakomissar/frontend-project-lvl1/actions)",
-  "main": "index.js",
-  "type": "module",
+  "description": "The Collection of simple cli games",
+  "main": "src/index.js",
+  "bin": {
+    "brain-even": "bin/brain-even.js",
+    "brain-calc": "bin/brain-calc.js",
+    "brain-gcd": "bin/brain-gcd.js",
+    "brain-progression": "bin/brain-progression.js",
+    "brain-prime": "bin/brain-prime.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/marinakomissar/frontend-project-lvl1.git"
   },
-  "author": "",
+  "author": "Marina Komissar",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/marinakomissar/frontend-project-lvl1/issues"
   },
   "homepage": "https://github.com/marinakomissar/frontend-project-lvl1#readme",
+  "keywords": [
+    "brain games",
+    "cli games",
+    "test project"
+  ],
+  "dependencies": {
+    "readline-sync": "^1.4.10"
+  },
   "devDependencies": {
-    "eslint": "^7.19.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-react": "^7.22.0"
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.1"
   }
 }
